Добавил тестовых инлайн стилей и классов для наглядности, переписал код в стиле ООП, немного отрефактрорил код, добавил рендер изображения.

--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,7 @@
 <body>
   <div id="app" class="conteiner-fluid">
     <div id="panel" class="bg-light sidebar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, tenetur?</div>
-    <div id="site" class="content">
-      <div class="row">
-        <div class="col-sm">
-          <h1>Test title</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iusto accusantium dicta odio, natus minima ipsam animi illo atque soluta nesciunt fugiat laborum voluptatem ipsum quia quisquam magni, optio nisi?</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iusto accusantium dicta odio, natus minima ipsam animi illo atque soluta nesciunt fugiat laborum voluptatem ipsum quia quisquam magni, optio nisi?</p>
-        </div>
-        <div class="col-sm">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iusto accusantium dicta odio, natus minima ipsam animi illo atque soluta nesciunt fugiat laborum voluptatem ipsum quia quisquam magni, optio nisi?</p>
-        </div>
-        <div class="col-sm">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi iusto accusantium dicta odio, natus minima ipsam animi illo atque soluta nesciunt fugiat laborum voluptatem ipsum quia quisquam magni, optio nisi?</p>
-        </div>
-      </div>
-    </div>
+    <div id="site" class=" p-4 text-white rounded bg-dark content"></div>
   </div>
 </body>
 </html>
