Начал работу над формой конструктора и немного оптимизировал старый код.

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div id="app" class="conteiner-fluid">
-    <div id="panel" class="bg-light sidebar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, tenetur?</div>
-    <div id="site" class=" p-4 text-white rounded bg-dark content"></div>
+    <div id="panel" class="bg-light sidebar"></div>
+    <div id="site" class="content"></div>
   </div>
 </body>
 </html>
